Fix gap and syntax error in links

--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,6 @@ header {
     color: white;
     padding-left: 0.75rem;
     padding-right: 0.75rem;
-    cursor: pointer;
 }
 
 .my_navbar li {
